flowc: flowc1.bat uses flowc1 directly